--- a/app/pages/settings/settings.html
+++ b/app/pages/settings/settings.html
@@ -202,6 +202,8 @@
 
     <script src="../../thirdparty/jquery@3.3.1/jquery-3.3.1.min.js"></script>
     <script src="../../thirdparty/popper.js@1.14.7/popper.min.js"></script>
+    <script src="../../assets/js/core/gakko.core.js"></script>
+    <script src="../../assets/js/helpers/gakko.helper.showMdlSnackbar.js"></script>
     <script defer src="../../thirdparty/bootstrap@4.3.1/bootstrap.bundle.min.js"></script>
     <script defer src="../../thirdparty/bootstrap@4.3.1/bootstrap.min.js"></script>
     <script defer src="../../thirdparty/material-design-lite@1.3.0/material.min.js"></script>
