Opravy v nastaveniach, pridaný pageArrayLoader

--- a/public/pages/settings/settings.html
+++ b/public/pages/settings/settings.html
@@ -97,10 +97,6 @@
             <div class="mdl-tooltip mdl-tooltip--large" for="quickActions_backRestore">Zálohovať a obnoviť nastavenia</div>
             <div class="mdl-tooltip mdl-tooltip--large" for="header_studentTracker">Zistite kde sa žiaci najčasteješie
                 zdržiavajú v škole</div>
-            <div class="mdl-tooltip mdl-tooltip--large" for=""></div>
-            <div class="mdl-tooltip mdl-tooltip--large" for=""></div>
-            <div class="mdl-tooltip mdl-tooltip--large" for=""></div>
-            <div class="mdl-tooltip mdl-tooltip--large" for=""></div>
 
             <!-------------------------------------------------------------------->
             <!--                             Content                            -->
@@ -232,6 +228,19 @@
                                         <label class="mdl-textfield__label" for="input_additionalPage3"></label>
                                     </div>
                                 </form>
+                            </div>
+                        </div>
+
+                        <!-------------------------------------------------------------------->
+                        <!--             Content / grid / left side / page interval         -->
+                        <!-------------------------------------------------------------------->
+
+                        <div class="mdl-grid option_card mdl-shadow--2dp form_spacer-16px">
+                            <div class="mdl-cell mdl-cell--6-col">
+                                <h6><b>Interval zobrazovania stánok</b></h6>
+                            </div>
+                            <div class="mdl-cell mdl-cell--6-col">
+                                <h6>10 sekúnd</h6>
                             </div>
                         </div>
 
