--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,4 @@
 <!--
-    TODO: (1) Do something about this landing page.
     TODO: (2) Fix caching headers
     TODO: (3) Add service worker
     TODO: (4) Add meta tags in other HTML files
@@ -17,13 +16,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Moderná e-nástenka a informačný systém pre školy zdarma">
     <meta name="og:title" property="og:title" content="Moderná e-nástenka a informačný systém pre školy zdarma">
+    <link rel="stylesheet" href="./assets/css/bg.circles.anim.css">
+    <link rel="stylesheet" href="./assets/css/ui.index.css">
+    <link rel="stylesheet" href="./libs/material-design-lite@1.3.0/material.min.css">
+    <link rel="stylesheet" href="./libs/material-design-icons@3.0.1/material-icons.css">
     <title>Gakkō | moderná e-nástenka a informačný systém pre školy</title>
 </head>
 
 <body>
+    <!-- ! Treba pridať Firebase hosting a auth-->
+    <!-- TODO: Nahradiť s login form -->
+    <dialog class="mdl-dialog">
+        <h4 class="mdl-dialog__title">Would you like to succ?</h4>
+        <div class="mdl-dialog__content">
+            <p>
+                This might be an interesting experience for you. Do you want to do so?
+            </p>
+        </div>
+        <div class="mdl-dialog__actions">
+            <button type="button" class="mdl-button">yos</button>
+            <button type="button" class="mdl-button close">naow</button>
+        </div>
+    </dialog>
+
+    <div class="demo-layout-transparent mdl-layout mdl-js-layout">
+        <header class="mdl-layout__header mdl-layout__header--transparent">
+            <div class="mdl-layout__header-row">
+                <span class="mdl-layout-title mdl-badge" data-badge="α">Gakkō</span>
+                <div class="mdl-layout-spacer"></div>
+                <nav class="mdl-navigation mdl-layout--large-screen-only" id="navigation_buttons">
+                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn-white btn_spacer-8px">Github
+                    </button>
+                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn-white btn_spacer-8px">Viac
+                        informácií
+                    </button>
+                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn-white btn_spacer-8px">Demo
+                    </button>
+                    <button id="show-dialog" class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect btn_spacer-8px">
+                        <i class="material-icons icon_button_align-fix">person_outline</i>Prihásenie
+                    </button>
+                </nav>
+            </div>
+        </header>
+        <div class="mdl-layout__drawer btn-white">
+            <span class="mdl-layout-title">Gakkō</span>
+            <nav class="mdl-navigation">
+                <a class="mdl-navigation__link" href="">Prihlásenie</a>
+                <a class="mdl-navigation__link" href="">Demo</a>
+                <a class="mdl-navigation__link" href="">Viac informácií</a>
+                <a class="mdl-navigation__link" href="">Github</a>
+            </nav>
+        </div>
+        <main class="mdl-layout__content">
+            <div class="text-center btn-white">
+                <!-- TODO: Add hero text and custom fonts -->
+                <span id="hero_greeter">
+                    <h2>Gakkō<br>
+                        <h6 style="margin-top: -16px;">Moderná e-nástenka a informačný systém pre školy zdarma</h6>
+                    </h2>
+                    <button id="show-dialog" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect btn_spacer-8px">
+                        <i class="material-icons icon_button_align-fix">picture_in_picture</i>demo
+                    </button>|
+                    <button id="show-dialog" class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect btn_spacer-8px">
+                        <i class="material-icons icon_button_align-fix">help_outline</i>Zistiť viac
+                    </button>
+                </span>
+            </div>
+        </main>
+    </div>
+    <div class="area">
+        <ul class="circles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
 
     <script async src="./assets/js/core.main.js"></script>
     <script async src="./assets/js/core.telemetry.js"></script>
+    <script async src="./assets/js/ui.index.js"></script>
+    <script async src="./libs/material-design-lite@1.3.0/material.min.js"></script>
 </body>
 
 </html>
