--- a/public/pages/settings/settings.html
+++ b/public/pages/settings/settings.html
@@ -309,10 +309,11 @@
                                 <label for="switch1" class="mdl-switch mdl-js-switch mdl-js-ripple-effect">
                                     <input type="checkbox" id="switch1" class="mdl-switch__input" disabled>
                                 </label>
-                                <h6>Shit happens, you know</h6><span>
+                                <h6>Nápoveda, wiki a iné</h6><span>
                                     <button class="mdl-button mdl-js-button mdl-button--raised icon_button_align-fix mdl-button--accent"
-                                        onclick="navigate('wiki')">Wiki</button>
-                                    <button class="mdl-button mdl-js-button mdl-button icon_button_align-fix">Nahlásiť
+                                    onclick="dora('https://github.com/ttomovcik/gakko/wiki');">Wiki</button>
+                                    <button class="mdl-button mdl-js-button mdl-button icon_button_align-fix"
+                                    onclick="dora('https://github.com/ttomovcik/gakko/issues');">Nahlásiť
                                         chybu</button>
                                     <!-- TODO: (6): Pridať wiki kokotiny -->
                                 </span>
