--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Moderná e-nástenka a informačný systém pre školy zdarma">
     <meta name="og:title" property="og:title" content="Moderná e-nástenka a informačný systém pre školy zdarma">
-    <link rel="stylesheet" href="./assets/css/bg.circles.anim.css">
-    <link rel="stylesheet" href="./assets/css/ui.index.css">
     <link rel="stylesheet" href="./libs/material-design-lite@1.3.0/material.min.css">
     <link rel="stylesheet" href="./libs/material-design-icons@3.0.1/material-icons.css">
+    <link rel="stylesheet" href="./assets/css/bg.circles.anim.css">
+    <link rel="stylesheet" href="./assets/css/ui.index.css">
     <title>Gakkō | moderná e-nástenka a informačný systém pre školy</title>
 </head>
 
 <body>
-    <!-- ! Treba pridať Firebase hosting a auth-->
     <!-- TODO: Nahradiť s login form -->
     <dialog class="mdl-dialog">
         <h4 class="mdl-dialog__title">Would you like to succ?</h4>
@@ -45,12 +44,12 @@
                 <span class="mdl-layout-title mdl-badge" data-badge="α">Gakkō</span>
                 <div class="mdl-layout-spacer"></div>
                 <nav class="mdl-navigation mdl-layout--large-screen-only" id="navigation_buttons">
-                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn-white btn_spacer-8px">Github
+                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn-white btn_spacer-8px" onclick="dora('https://github.com/ttomovcik/gakko/');">Github
                     </button>
-                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn-white btn_spacer-8px">Viac
+                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn-white btn_spacer-8px" onclick="dora('https://github.com/ttomovcik/gakko/wiki');">Viac
                         informácií
                     </button>
-                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn-white btn_spacer-8px">Demo
+                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn-white btn_spacer-8px" onclick="dora('https://gakko-pwa.firebaseapp.com/pages/dashboard/dashboard.html');">Demo
                     </button>
                     <button id="show-dialog" class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect btn_spacer-8px">
                         <i class="material-icons icon_button_align-fix">person_outline</i>Prihásenie
@@ -61,23 +60,24 @@
         <div class="mdl-layout__drawer btn-white">
             <span class="mdl-layout-title">Gakkō</span>
             <nav class="mdl-navigation">
-                <a class="mdl-navigation__link" href="">Prihlásenie</a>
-                <a class="mdl-navigation__link" href="">Demo</a>
-                <a class="mdl-navigation__link" href="">Viac informácií</a>
-                <a class="mdl-navigation__link" href="">Github</a>
+                <a class="mdl-navigation__link">Prihlásenie</a>
+                <a class="mdl-navigation__link" href="./pages/dashboard/dashboard.html">Demo</a>
+                <a class="mdl-navigation__link" href="https://github.com/ttomovcik/gakko/wiki">Viac informácií</a>
+                <a class="mdl-navigation__link" href="https://github.com/ttomovcik/gakko">Github</a>
             </nav>
         </div>
         <main class="mdl-layout__content">
             <div class="text-center btn-white">
-                <!-- TODO: Add hero text and custom fonts -->
                 <span id="hero_greeter">
-                    <h2>Gakkō<br>
+                    <h1>Gakkō<br>
                         <h6 style="margin-top: -16px;">Moderná e-nástenka a informačný systém pre školy zdarma</h6>
-                    </h2>
-                    <button id="show-dialog" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect btn_spacer-8px">
+                    </h1>
+                    <button id="show-dialog" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect btn_spacer-8px"
+                        onclick="dora('https://gakko-pwa.firebaseapp.com/pages/dashboard/dashboard.html');">
                         <i class="material-icons icon_button_align-fix">picture_in_picture</i>demo
                     </button>|
-                    <button id="show-dialog" class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect btn_spacer-8px">
+                    <button id="show-dialog" class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect btn_spacer-8px"
+                        onclick="dora('https://github.com/ttomovcik/gakko/wiki');">
                         <i class="material-icons icon_button_align-fix">help_outline</i>Zistiť viac
                     </button>
                 </span>
@@ -99,10 +99,13 @@
         </ul>
     </div>
 
+    <script async src="https://www.gstatic.com/firebasejs/5.9.0/firebase-app.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133294265-1"></script>
+    <script async src="https://browser.sentry-cdn.com/4.6.4/bundle.min.js" crossorigin="anonymous"></script>
     <script async src="./assets/js/core.main.js"></script>
-    <script async src="./assets/js/core.telemetry.js"></script>
     <script async src="./assets/js/ui.index.js"></script>
     <script async src="./libs/material-design-lite@1.3.0/material.min.js"></script>
+    <script defer src="./assets/js/core.telemetry.js"></script>
 </body>
 
 </html>
