--- a/public/pages/settings/settings.html
+++ b/public/pages/settings/settings.html
@@ -179,7 +179,7 @@
                             <div class="mdl-cell mdl-cell--6-col">
                                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                                     <input class="mdl-textfield__input" type="text" id="input_schoolName">
-                                    <label class="mdl-textfield__label" for="input_schoolName">Názov školy</label>
+                                    <label id="label_schoolName" class="mdl-textfield__label" for="input_schoolName">Názov školy</label>
                                 </div>
                             </div>
                         </div>
@@ -196,7 +196,7 @@
                                 <form action="#">
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                                         <input class="mdl-textfield__input" type="text" id="input_edupageServer">
-                                        <label class="mdl-textfield__label" for="input_edupageServer">Adresa edupage
+                                        <label id="label_edupageServer" class="mdl-textfield__label" for="input_edupageServer">Adresa edupage
                                             serveru</label>
                                     </div>
                                 </form>
@@ -215,7 +215,7 @@
                                 <form action="#">
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                                         <input class="mdl-textfield__input" type="text" id="input_additionalPage1">
-                                        <label class="mdl-textfield__label" for="input_additionalPage1">Adresa
+                                        <label id="label_additionalPage1" class="mdl-textfield__label" for="input_additionalPage1">Adresa
                                             (www.ayy-lmao.com)</label>
                                     </div>
                                 </form>
@@ -227,7 +227,7 @@
                                 <form action="#">
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                                         <input class="mdl-textfield__input" type="text" id="input_additionalPage2">
-                                        <label class="mdl-textfield__label" for="input_additionalPage2">Adresa
+                                        <label d="label_additionalPage2" class="mdl-textfield__label" for="input_additionalPage2">Adresa
                                             (www.ayy-lmao.com)</label>
                                     </div>
                                 </form>
@@ -239,7 +239,7 @@
                                 <form action="#">
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                                         <input class="mdl-textfield__input" type="text" id="input_additionalPage3">
-                                        <label class="mdl-textfield__label" for="input_additionalPage3">Adresa
+                                        <label d="label_additionalPage3" class="mdl-textfield__label" for="input_additionalPage3">Adresa
                                             (www.ayy-lmao.com)</label>
                                     </div>
                                 </form>
