--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,6 @@
 <!--
     TODO: (2) Fix caching headers
     TODO: (3) Add service worker
-    TODO: (4) Add meta tags in other HTML files
 -->
 <!DOCTYPE html>
 <html lang="sk-SK">
@@ -18,7 +17,8 @@
     <meta name="og:title" property="og:title" content="Moderná e-nástenka a informačný systém pre školy zdarma">
     <link rel="stylesheet" href="./libs/material-design-lite@1.3.0/material.min.css">
     <link rel="stylesheet" href="./libs/material-design-icons@3.0.1/material-icons.css">
-    <link rel="stylesheet" href="./assets/css/bg.circles.anim.css">
+    <link rel="stylesheet" href="./assets/css/anim.body.circles.css">
+    <link rel="stylesheet" href="./assets/css/anim.body.fadeIn.css">
     <link rel="stylesheet" href="./assets/css/ui.index.css">
     <title>Gakkō | moderná e-nástenka a informačný systém pre školy</title>
 </head>
@@ -57,7 +57,7 @@
                 </nav>
             </div>
         </header>
-        <div class="mdl-layout__drawer btn-white">
+        <div class="mdl-layout__drawer">
             <span class="mdl-layout-title">Gakkō</span>
             <nav class="mdl-navigation">
                 <a class="mdl-navigation__link">Prihlásenie</a>
@@ -72,10 +72,6 @@
                     <h1>Gakkō<br>
                         <h6 style="margin-top: -16px;">Moderná e-nástenka a informačný systém pre školy zdarma</h6>
                     </h1>
-                    <button id="show-dialog" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect btn_spacer-8px"
-                        onclick="dora('https://gakko-pwa.firebaseapp.com/pages/dashboard/dashboard.html');">
-                        <i class="material-icons icon_button_align-fix">picture_in_picture</i>demo
-                    </button>|
                     <button id="show-dialog" class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect btn_spacer-8px"
                         onclick="dora('https://github.com/ttomovcik/gakko/wiki');">
                         <i class="material-icons icon_button_align-fix">help_outline</i>Zistiť viac
