Opravená farba písma

--- a/public/index.html
+++ b/public/index.html
@@ -44,12 +44,12 @@
                 <span class="mdl-layout-title mdl-badge" data-badge="α">Gakkō</span>
                 <div class="mdl-layout-spacer"></div>
                 <nav class="mdl-navigation mdl-layout--large-screen-only" id="navigation_buttons">
-                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn-white btn_spacer-8px" onclick="dora('https://github.com/ttomovcik/gakko/');">Github
+                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn_spacer-8px" onclick="dora('https://github.com/ttomovcik/gakko/');">Github
                     </button>
-                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn-white btn_spacer-8px" onclick="dora('https://github.com/ttomovcik/gakko/wiki');">Viac
+                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn_spacer-8px" onclick="dora('https://github.com/ttomovcik/gakko/wiki');">Viac
                         informácií
                     </button>
-                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn-white btn_spacer-8px" onclick="dora('https://gakko-pwa.firebaseapp.com/pages/dashboard/dashboard.html');">Demo
+                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect btn_spacer-8px" onclick="dora('https://gakko-pwa.firebaseapp.com/pages/dashboard/dashboard.html');">Demo
                     </button>
                     <button id="show-dialog" class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect btn_spacer-8px">
                         <i class="material-icons icon_button_align-fix">person_outline</i>Prihásenie
@@ -67,7 +67,7 @@
             </nav>
         </div>
         <main class="mdl-layout__content">
-            <div class="text-center btn-white">
+            <div class="text-center">
                 <span id="hero_greeter">
                     <h1>Gakkō<br>
                         <h6 style="margin-top: -16px;">Moderná e-nástenka a informačný systém pre školy zdarma</h6>
