Pridané TaffyDB a cookie info

--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,10 @@
         </ul>
     </div>
 
+    <a href="#" onclick="document.cookie='cookiebar=;expires=Thu, 01 Jan 1970 00:00:01 GMT;path=/'; setupCookieBar(); return false;">Click
+        here to revoke the Cookie consent</a>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/cookie-bar/cookiebar-latest.min.js?theme=white&tracking=1&thirdparty=1&always=1&scrolling=1"></script>
     <script async src="https://www.gstatic.com/firebasejs/5.9.0/firebase-app.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133294265-1"></script>
     <script async src="https://browser.sentry-cdn.com/4.6.4/bundle.min.js" crossorigin="anonymous"></script>
